--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="W5n-AB-ptD">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Record Sounds View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RecordSoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -38,7 +38,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.15152517922011663" green="0.77514483915196675" blue="0.91250404792746109" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="VdW-A6-2As" firstAttribute="top" secondItem="qqg-1l-8PM" secondAttribute="bottom" constant="21" id="1W9-ed-si1"/>
                             <constraint firstItem="ekh-vb-M8p" firstAttribute="centerX" secondItem="VdW-A6-2As" secondAttribute="centerX" id="3Vs-ig-cJM"/>
@@ -48,13 +48,51 @@
                             <constraint firstItem="qqg-1l-8PM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uIx-9E-3h2"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="BSn-x0-ud1"/>
                     <connections>
                         <outlet property="recordingButton" destination="qqg-1l-8PM" id="Wvd-7N-AfG"/>
                         <outlet property="recordingLabel" destination="VdW-A6-2As" id="qY3-28-4bQ"/>
                         <outlet property="stopRecordingButton" destination="ekh-vb-M8p" id="Gbg-AV-mua"/>
+                        <segue destination="VSC-cd-GP9" kind="show" identifier="stopRecording" id="jSL-96-n1F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1060" y="37.331334332833585"/>
+        </scene>
+        <!--Play Sounds View Controller-->
+        <scene sceneID="tmN-mg-Fv4">
+            <objects>
+                <viewController id="VSC-cd-GP9" customClass="PlaySoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="XiF-Rh-EhL"/>
+                        <viewControllerLayoutGuide type="bottom" id="7XK-GX-82Z"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YbY-eO-qHA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="urz-17-Lcr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1793" y="37"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yZD-DP-1h6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="W5n-AB-ptD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GxQ-Ay-BE4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="iea-H6-VR9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="878-zF-Rvj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="120.8" y="37.331334332833585"/>
         </scene>
